fixed few things

--- a/templates/about_ergot.html
+++ b/templates/about_ergot.html
@@ -9,20 +9,7 @@
 </head>
 <body>
 
-  <div class="top-header">
-    <div class="site-name">🌾 CropScanAI</div>
-    <nav class="nav-links">
-      <a href="{{ url_for('home') }}">{{ _('HOME') }}</a>
-      <a href="{{ url_for('about_ergot') }}">{{ _('ABOUT ERGOT') }}</a>
-      <a href="{{ url_for('identify') }}">{{ _('IDENTIFY') }}</a>
-      <a href="{{ url_for('faq') }}">{{ _('FAQs') }}</a>
-      {% if session.get('language', 'en') == 'en' %}
-        <a href="{{ url_for('set_language', language='hi') }}">हिन्दी</a>
-      {% else %}
-        <a href="{{ url_for('set_language', language='en') }}">ENGLISH</a>
-      {% endif %}
-    </nav>
-  </div>
+{% include 'base.html' %}
   
   <header>
     <h1>{{ _('About Ergot') }}</h1>
@@ -110,7 +97,8 @@
                 </div>
                 <div class="danger-item">
                     <h3><i class="fas fa-dollar-sign"></i> {{ _('Economic') }}</h3>
-                    <p>{{ _('Crop rejection >0.05% contamination') }}</p>
+                    <p>{{ _('Crop rejection >0.05%% contamination') }}</p>
+
                 </div>
             </div>
         </section>
